[package]
name = "json_rpc_v2"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.17"
serde = { version = "1.0.157", features = ["derive"] }
serde_json = "1.0.94"
tokio = { version = "1.26.0", features = ["sync", "rt"] }

[dev-dependencies]
env_logger = "0.10.0"
