[package]
name = "json_rpc_v2"
version = "0.2.0"
edition = "2021"
description = "JSON-RPC 2.0"
repository = "https://github.com/luoshuqi/json_rpc_v2"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.17"
serde = { version = "1.0.157", features = ["derive"] }
serde_json = "1.0.94"
tokio = { version = "1.26.0", features = ["sync", "rt"] }
json_rpc_v2_macro = { path = "json_rpc_v2_macro" }

[dev-dependencies]
env_logger = "0.10.0"
hyper = { version = "0.14.25", features = ["full"] }
tokio = { version = "1.26.0", features = ["full"] }
