[package]
name = "json_rpc_v2_macro"
version = "0.1.0"
edition = "2021"
description = "JSON-RPC 2.0"
repository = "https://github.com/luoshuqi/json_rpc_v2"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.52"
quote = "1.0.26"
syn = { version = "2.0.0", features = ["full"] }
